Cleaning up result files

--- a/src/jupyter/jyim6/annotated_img/tif processing.ipynb
+++ b/src/jupyter/jyim6/annotated_img/tif processing.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -41,21 +41,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing cell_detection_0.tiff\n",
-      "Max grey value 52613\n",
-      "Saving as cell_detection_0.tif\n",
-      "\n",
-      "Processing cell_detection_1.tiff\n",
-      "Max grey value 62075\n",
-      "Saving as cell_detection_1.tif\n",
-      "\n",
-      "Processing cell_detection_2.tiff\n",
+      "Processing cell_detection_8.tiff\n",
       "Max grey value 65535\n",
-      "Saving as cell_detection_2.tif\n",
+      "Saving as cell_detection_8.tif\n",
       "\n",
-      "Processing cell_detection_3.tiff\n",
+      "Processing cell_detection_9.tiff\n",
       "Max grey value 65535\n",
-      "Saving as cell_detection_3.tif\n",
+      "Saving as cell_detection_9.tif\n",
       "\n"
      ]
     }
@@ -79,7 +71,8 @@
     "                new_img[i, j, k, 2] = g_val\n",
     "    new_fname = fname[:-5]+'.tif'\n",
     "    print(\"Saving as {}\\n\".format(new_fname))\n",
-    "    imsave(new_fname, new_img.astype(np.uint8))\n"
+    "    imsave(new_fname, new_img.astype(np.uint8))\n",
+    "    os.remove(fname)\n"
    ]
   },
   {
