--- a/src/jupyter/jliu118/annotation-csv/split_s3617_cutout.ipynb
+++ b/src/jupyter/jliu118/annotation-csv/split_s3617_cutout.ipynb
@@ -487,7 +487,7 @@
    "execution_count": 13,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -676,7 +676,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "z_range, y_range, x_range = img_stack.shape\n",
+    "    for z,x,y in a_centers:\n",
+    "        for i in range(-3,4):\\n\",\n",
+    "            for j in range(-3,4):\\n\",\n",
+    "                for k in range(-3,4):\\n\",\n",
+    "                    s3617_img[min(z+i, z_range-1), min(y+j, y_range-1), min(x+k, x_range-1)] = 0"
+   ]
   },
   {
    "cell_type": "code",
