--- a/src/jupyter/srivathsapv/package-log/Basic Preprocessing and Connected Components.ipynb
+++ b/src/jupyter/srivathsapv/package-log/Basic Preprocessing and Connected Components.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic Preprocessing and Connected Components"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from tifffile import imread, imsave\n",
