added bossHandler package

--- a/src/jupyter/kkarbasi/tractography_mvp.ipynb
+++ b/src/jupyter/kkarbasi/tractography_mvp.ipynb
@@ -42250,7 +42250,7 @@
    "source": [
     "## Skeletonize and extract connected components\n",
     "Each connencted component is labeled with a unique colormap.\n",
-    "Outout - concomp_col: "
+    "Outout - concomp_col: Color labeled volume (4d matrix, 4th dimesion is voxels' RGB color code)"
    ]
   },
   {
